tests/ui/offset-of/offset-of-arg-count.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, or `<`, found `<eof>`
  --> $DIR/offset-of-arg-count.rs:6:16
   |
LL |     offset_of!(NotEnoughArguments);
   |                ^^^^^^^^^^^^^^^^^^ expected one of `!`, `(`, `+`, `,`, `::`, or `<`

error: expected 2 arguments
  --> $DIR/offset-of-arg-count.rs:7:5
   |
LL |     offset_of!(NotEnoughArgumentsWithAComma, );
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 2 arguments
  --> $DIR/offset-of-arg-count.rs:8:5
   |
LL |     offset_of!(Container, field, too many arguments);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

